<resources>
    <string name="app_name">ThisIsOurAppOnePointO</string>

    <string-array name="majors">
        <item>Select your major</item>
        <item>Aerospace Engineering</item>
        <item>Applied Sciences in Engineering</item>
        <item>Bioenvironmental Engineering</item>
        <item>Biomedical Engineering</item>
        <item>Chemical and Biochemical Engineering</item>
        <item>Civil and Environmental Engineering</item>
        <item>Electrical and Computer Engineering</item>
        <item>Industrial and Systems Engineering</item>
        <item>Materials Science and Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Undecided</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_eboard_list">Eboard Members</string>
    <string name="nav_header_events">Events</string>
    <string name="nav_header_mentor">Mentor Match</string>
    <string name="nav_header_suggestions">Suggestions and Messages</string>
    <string name="nav_header_social_media">Social Media Links</string>
    <string name="nav_header_apparel">Apparel</string>
    <string name="nav_header_eboard_login">Eboard Login</string>
    <string name="nav_header_qr_scanner">Scanner</string>
    <string name="nav_header_signin">Sign In</string>
    <string name="nav_header_signup">Sign Up</string>
    <string name="nav_header_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
